--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,12 @@ Django==3.0.7
 django-allauth==0.42.0
 django-countries==6.1.2
 django-crispy-forms==1.9.1
+django-mathfilters==1.0.0
+djangorestframework==3.11.0
+future==0.18.2
 idna==2.9
+Mako==1.1.3
+MarkupSafe==1.1.1
 oauthlib==3.1.0
 Pillow==7.1.2
 psycopg2==2.8.5
@@ -14,5 +19,6 @@ python3-openid==3.1.0
 pytz==2020.1
 requests==2.24.0
 requests-oauthlib==1.3.0
+serializers==0.2.4
 sqlparse==0.3.1
 urllib3==1.25.9
